@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-28T08:16:56Z",
-  "count" : 4,
+  "timestamp" : "2022-06-28T16:16:39Z",
+  "count" : 2,
   "count_minmax" : [ 1, 5 ],
-  "count_decinc" : [ -1, +5 ],
-  "uniques" : 3,
+  "count_decinc" : [ -3, +5 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 3 ],
-  "uniques_decinc" : [ -0, +3 ]
+  "uniques_decinc" : [ -2, +3 ]
 }
