@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-06-28T08:16:56Z",
+  "timestamp" : "2022-06-28T16:16:39Z",
   "count_outdated" : 360,
   "uniques_outdated" : 194,
-  "count" : 385,
-  "uniques" : 210,
+  "count" : 383,
+  "uniques" : 208,
   "clones" : [
     {
       "timestamp": "2022-06-14T00:00:00Z",
-      "count": 4,
+      "count": 2,
       "count_minmax": [ 1, 5 ],
-      "uniques": 3,
+      "uniques": 1,
       "uniques_minmax": [ 1, 3 ]
     },
     {
