@@ -1,11 +1,11 @@
 {
-  "count": 25,
-  "uniques": 3,
+  "count": 23,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2022-06-14T00:00:00Z",
-      "count": 4,
-      "uniques": 3
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2022-06-15T00:00:00Z",
