@@ -1,3 +1,10 @@
+2022-06-28T16:16:39Z:
+* notice: last 14d: unq all: 2 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 194 360 / 210 385
+* notice: next accum: outdated-unq outdated-all / unq all: 194 360 / 208 383
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -2 -2 / +3 +5 -2 -3 / 1 2
+* notice: removed / changed dates: [] / [2022-06-14]
+
 2022-06-28T08:16:56Z:
 * notice: last 14d: unq all: 3 25
 * notice: prev accum: outdated-unq outdated-all / unq all: 194 360 / 209 385
